--- a/package.json
+++ b/package.json
@@ -10,24 +10,19 @@
     "compress": "^0.99.0",
     "concat-stream": "^1.5.1",
     "debug": "~0.7.4",
-    "ejs": "~2.5.5",
     "finalhandler": "^0.5.0",
     "lodash": "^3.10.1",
-    "optional": "^0.1.3",
     "request": ">=2.9.0",
     "sax": ">=0.6",
     "selectn": "^0.9.6",
-    "serve-static": "^1.11.1",
     "strip-bom": "~0.3.1",
     "uuid": "^3.0.1",
     "xml-crypto": "~0.8.0"
   },
-  "optionalDependencies": {
-    "ursa": "0.8.5 || >=0.9.4"
-  },
+  "private": true,
   "repository": {
     "type": "git",
-    "url": "https://github.com/milewise/node-soap.git"
+    "url": "https://github.com/PMLavigne/node-soap.git"
   },
   "main": "./index.js",
   "directories": {
@@ -41,7 +36,8 @@
     "test": "mocha --timeout 10000 test/*-test.js test/security/*.js"
   },
   "keywords": [
-    "soap"
+    "soap",
+    "browser"
   ],
   "license": "MIT",
   "devDependencies": {
